--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.0"
 
     defaultConfig {
-        applicationId "se.oaakee.oaakee"
+        applicationId "se.elbus.oaakee"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
