--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".WiFiDemo"
+            android:name=".BusFinder"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
