--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".AlarmService" />
+        <service android:name=".Services.AlarmService" />
     </application>
 
 </manifest>
