--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:preference-v7:23.1.0'
     compile 'com.android.support:support-v4:23.0.1'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile('com.squareup.retrofit:converter-simplexml:1.9.0') {
