--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".Services.AlarmService" />
+        <service android:name=".services.AlarmService" />
     </application>
 
 </manifest>
